[package]
name = "wasefire-applet-api-desc"
version = "0.1.6-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2021"
description = "Description of the Wasefire applet API"
repository = "https://github.com/google/wasefire"
include = ["/src"]
keywords = ["embedded", "framework", "no-std", "wasm"]
categories = ["embedded", "no-std", "wasm"]

[dependencies]
anyhow = { version = "1.0.79", default-features = false, features = ["std"] }
clap = { version = "4.4.18", default-features = false, features = ["derive", "std"] }
data-encoding = { version = "2.5.0", default-features = false }
data-encoding-macro = { version = "0.1.14", default-features = false }
proc-macro2 = { version = "1.0.76", default-features = false }
quote = { version = "1.0.35", default-features = false }
syn = { version = "2.0.48", default-features = false, features = ["printing"] }

[features]
# API features.
api-button = []
api-crypto-ccm = ["internal-api-crypto"]
api-crypto-ec = ["internal-api-crypto"]
api-crypto-gcm = ["internal-api-crypto"]
api-crypto-hash = ["internal-api-crypto-hash"]
api-crypto-hkdf = ["internal-api-crypto-hash"]
api-crypto-hmac = ["internal-api-crypto-hash"]
api-gpio = []
api-led = []
api-platform = ["internal-api-platform"]
api-platform-update = ["internal-api-platform"]
api-radio-ble = ["internal-api-radio"]
api-rng = []
api-store = ["internal-api-store"]
api-store-fragment = ["internal-api-store"]
api-timer = []
api-uart = []
api-usb-serial = ["internal-api-usb"]
# Enables all API features.
full-api = [
  "api-button",
  "api-crypto-ccm",
  "api-crypto-ec",
  "api-crypto-gcm",
  "api-crypto-hash",
  "api-crypto-hkdf",
  "api-crypto-hmac",
  "api-gpio",
  "api-led",
  "api-platform",
  "api-platform-update",
  "api-radio-ble",
  "api-rng",
  "api-store",
  "api-store-fragment",
  "api-timer",
  "api-uart",
  "api-usb-serial",
]
# Internal features.
internal-api-crypto = []
internal-api-crypto-hash = ["internal-api-crypto"]
internal-api-platform = []
internal-api-radio = []
internal-api-store = []
internal-api-usb = []
