[package]
name = "wasefire-applet-api-desc"
version = "0.2.3"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Description of the Wasefire applet API"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "framework", "no-std", "wasm"]
categories = ["embedded", "no-std", "wasm"]

[dependencies]
data-encoding = { version = "2.10.0", default-features = false }
data-encoding-macro = { version = "0.1.19", default-features = false }
proc-macro2 = { version = "1.0.106", default-features = false }
quote = { version = "1.0.44", default-features = false }
syn = { version = "2.0.114", default-features = false, features = ["printing"] }

[features]
# API features.
api-button = []
api-clock = []
api-crypto-cbc = ["internal-api-crypto"]
api-crypto-ccm = ["internal-api-crypto"]
api-crypto-ec = ["internal-api-crypto"]
api-crypto-ecdh = ["internal-api-crypto"]
api-crypto-ecdsa = ["internal-api-crypto"]
api-crypto-ed25519 = ["internal-api-crypto"]
api-crypto-gcm = ["internal-api-crypto"]
api-crypto-hash = ["internal-api-crypto-hash"]
api-crypto-hkdf = ["internal-api-crypto-hash"]
api-crypto-hmac = ["internal-api-crypto-hash"]
api-fingerprint-matcher = ["internal-api-fingerprint"]
api-fingerprint-sensor = ["internal-api-fingerprint"]
api-gpio = []
api-led = []
api-platform = ["internal-api-platform"]
api-platform-protocol = ["internal-api-platform"]
api-platform-update = ["internal-api-platform"]
api-rng = []
api-store = ["internal-api-store"]
api-store-fragment = ["internal-api-store"]
api-timer = []
api-uart = []
api-usb-ctap = ["internal-api-usb"]
api-usb-serial = ["internal-api-usb"]
api-vendor = []
# Enables all API features.
full-api = [
  "api-button",
  "api-clock",
  "api-crypto-cbc",
  "api-crypto-ccm",
  "api-crypto-ec",
  "api-crypto-ecdh",
  "api-crypto-ecdsa",
  "api-crypto-ed25519",
  "api-crypto-gcm",
  "api-crypto-hash",
  "api-crypto-hkdf",
  "api-crypto-hmac",
  "api-fingerprint-matcher",
  "api-fingerprint-sensor",
  "api-gpio",
  "api-led",
  "api-platform",
  "api-platform-protocol",
  "api-platform-update",
  "api-rng",
  "api-store",
  "api-store-fragment",
  "api-timer",
  "api-uart",
  "api-usb-ctap",
  "api-usb-serial",
  "api-vendor",
]
# Internal features.
internal-api-crypto = []
internal-api-crypto-hash = ["internal-api-crypto"]
internal-api-fingerprint = []
internal-api-platform = []
internal-api-store = []
internal-api-usb = []

[lints]
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
