[package]
name = "wasefire-applet-api-macro"
version = "0.6.0-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2021"
description = "Proc-macro to generate the Wasefire applet API"
repository = "https://github.com/google/wasefire"
include = ["/src"]
keywords = ["embedded", "framework", "no-std", "wasm"]
categories = ["embedded", "no-std", "wasm"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.67", default-features = false }
wasefire-applet-api-desc = { version = "=0.1.6-git", path = "../api-desc" }

[features]
multivalue = ["wasefire-applet-api-desc/multivalue"]
