[package]
name = "wasefire-applet-api-macro"
version = "0.6.1-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2021"
description = "Proc-macro to generate the Wasefire applet API"
repository = "https://github.com/google/wasefire"
include = ["/src"]
keywords = ["embedded", "framework", "no-std", "wasm"]
categories = ["embedded", "no-std", "wasm"]

[lib]
proc-macro = true

[dependencies]
wasefire-applet-api-desc = { version = "=0.2.0-git", path = "../api-desc" }

[features]
api-button = ["wasefire-applet-api-desc/api-button"]
api-crypto-ccm = ["wasefire-applet-api-desc/api-crypto-ccm"]
api-crypto-ec = ["wasefire-applet-api-desc/api-crypto-ec"]
api-crypto-gcm = ["wasefire-applet-api-desc/api-crypto-gcm"]
api-crypto-hash = ["wasefire-applet-api-desc/api-crypto-hash"]
api-crypto-hkdf = ["wasefire-applet-api-desc/api-crypto-hkdf"]
api-crypto-hmac = ["wasefire-applet-api-desc/api-crypto-hmac"]
api-gpio = ["wasefire-applet-api-desc/api-gpio"]
api-led = ["wasefire-applet-api-desc/api-led"]
api-platform = ["wasefire-applet-api-desc/api-platform"]
api-platform-protocol = ["wasefire-applet-api-desc/api-platform-protocol"]
api-platform-update = ["wasefire-applet-api-desc/api-platform-update"]
api-radio-ble = ["wasefire-applet-api-desc/api-radio-ble"]
api-rng = ["wasefire-applet-api-desc/api-rng"]
api-store = ["wasefire-applet-api-desc/api-store"]
api-store-fragment = ["wasefire-applet-api-desc/api-store-fragment"]
api-timer = ["wasefire-applet-api-desc/api-timer"]
api-uart = ["wasefire-applet-api-desc/api-uart"]
api-usb-serial = ["wasefire-applet-api-desc/api-usb-serial"]

[lints]
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unsafe-op-in-unsafe-fn = "warn"
rust.unused-crate-dependencies = "warn"
