[package]
name = "wasefire-applet-api"
version = "0.4.0-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2021"
description = "Low-level Wasefire applet API"
repository = "https://github.com/google/wasefire"
include = ["/src"]
keywords = ["embedded", "framework", "no-std", "wasm"]
categories = ["embedded", "no-std", "wasm"]

[package.metadata.docs.rs]
features = ["wasm"]
targets = ["riscv32imc-unknown-none-elf", "thumbv7em-none-eabi"]

[dependencies]
sealed = { version = "0.5.0", default-features = false, optional = true }
wasefire-applet-api-macro = { version = "0.4.0-git", path = "../api-macro" }

[features]
# Compiles for host or wasm (choose exactly one).
host = ["dep:sealed"]
wasm = []
# Enables multivalue support (unstable).
multivalue = ["wasefire-applet-api-macro/multivalue"]
# Implements the API with panics (using weak symbols to permit custom definitions).
native = []
